--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,294 @@
-/* место для вашего кода */
+.header {
+    max-width: 1100px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 92px;
+    padding: 0 27px;
+}
+
+.header__links-list {
+    display: flex;
+    gap: 13px;
+    list-style: circle;
+}
+
+.header__links-list-item_no-bullet {
+    list-style: none;
+}
+
+.header__links-list-item {
+    padding-right: 13px;
+}
+
+.header__links-list-item:last-child {
+    padding-right: 0;
+}
+
+.header__link {
+    font-size: 18px;
+    line-height: 21.13px;
+    text-decoration: none;
+    border-bottom: 1px solid #000;
+    width: fit-content;
+}
+
+.header__link_active {
+    text-decoration: none;
+    border-bottom: none;
+}
+
+.header__logo_image {
+    width: 148px;
+    margin-left: 36px;
+}
+
+.address {
+    display: flex;
+    flex-direction: column;
+    max-width: 240px;
+    width: 100%;
+    margin-left: auto;
+    font-size: 18px;
+    line-height: 24.3px;
+    font-style: normal;
+}
+
+.header__address {
+    text-decoration: none;
+    border-bottom: 1px solid #000;
+    width: fit-content;
+}
+
+.cover {
+    background-image: url(../images/cover.jpg);
+    margin-top: 96px;
+    padding: 165px 50px 51px 50px;
+    position: relative;
+    z-index: 1;
+}
+
+.overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 60%;
+    z-index: -1;
+}
+
+.cover__title {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    font-size: 100px;
+    font-weight: 700;
+    letter-spacing: 30px;
+    text-transform: uppercase;
+    color: #FFF;
+    line-height: 1.15;
+}
+
+.aligned-text_center {
+    text-align: center;
+}
+
+.aligned-text_right {
+    text-align: right;
+}
+
+.letter-spacing-extended {
+    letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+    letter-spacing: 0;
+}
+
+.cover__description {
+    margin-top: 135px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cover__description-text {
+    color: #FFF;
+    font-size: 22px;
+    line-height: 1.27;
+    text-transform: uppercase;
+    font-weight: 400;
+    word-spacing: 20px;
+}
+
+.bet-button {
+    padding: 12px 32px 11px 31px;
+    border: 1px solid #fff;
+    font-weight: 500;
+    font-size: 22px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #fff;
+    background-color: transparent;
+}
+
+.lots {
+    margin-top: 180px;
+    padding: 0px 24px;
+}
+
+.lots__heading {
+    margin-left: 40px;
+    font-weight: 700;
+    font-size: 40px;
+    text-transform: uppercase;
+    color: #000;
+}
+
+.lots__card-list {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    margin-top: 27px;
+}
+
+.lots__card-list-item {
+    position: relative;
+    z-index: 1;
+    max-width: 334px;
+    flex-grow: 1;
+    padding: 51px 40px 48px 40px;
+    min-height: 563px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.card-link {
+    text-decoration: none;
+}
+
+.card_type_film {
+    background: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+    background: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+    background: url(../images/card-lot-03.jpg);
+}
+
+.card__title {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 1.2;
+    text-transform: uppercase;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #fff;
+}
+
+.card__text {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 1.2;
+    color: #fff;
+}
+
+.lots__look-more-link {
+    display: inline-block;
+    margin-top: 40px;
+    margin-left: 40px;
+    font-weight: 400;
+    font-size: 20px;
+    color: #000;
+}
+
+.about {
+    margin-top: 181px;
+}
+
+.about__list {
+    display: grid;
+    grid-template-columns: 334px 1fr;
+}
+
+.about__column:nth-child(1) {
+    padding: 47px;
+}
+
+.about__logo {
+    max-width: 240px;
+    height: 240px;
+    border-radius: 50%;
+    background-color: #000;
+}
+
+.about__logo-image {
+    padding: 65px 47px 62px 50px;
+    height: 100%;
+}
+
+.about__title {
+    font-weight: 700;
+    font-size: 40px;
+    text-transform: uppercase;
+    padding-top: 136px;
+    padding-bottom: 100px;
+}
+
+.about__text {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 1.2;
+    color: #000;
+}
+
+.about__text-mt {
+    margin-top: 24px;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 180px;
+    padding: 0px 26px;
+}
+
+.footer__column:nth-child(2) {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer__column:nth-child(3) {
+    width: 240px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__link {
+    font-weight: 400;
+    font-size: 18px;
+    text-align: center;
+}
+
+.footer__active {
+    text-decoration: none;
+}
+
+.footer__social-link {
+    text-decoration: none;
+}
+
+.footer__social-img {
+    width: 48px;
+}
