--- a/styles/style.css
+++ b/styles/style.css
@@ -152,7 +152,7 @@
 .lots__card-list {
     display: flex;
     justify-content: space-between;
-    gap: 0px 25px;
+    gap: 25px;
     flex-wrap: wrap;
     list-style: none;
     margin-top: 27px;
@@ -266,7 +266,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: 180px;
-    padding: 0px 50px 82px 0px;
+    padding: 0px 50px 82px 50px;
 }
 
 .footer__column:nth-child(2) {
